correcting overflow

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -514,7 +514,7 @@ span{
 .contact-container{
     color: #ffffff;
     text-align: center;
-    height: 60vh;
+    height: 80vh;
     display: flex;
     flex-direction: row;
     align-items: center;
